Added /protected/Default.aspx as the secure landing page.

--- a/src/TTFWebFormsToMvc.Web/MainLayout.Master
+++ b/src/TTFWebFormsToMvc.Web/MainLayout.Master
@@ -1,5 +1,5 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MainLayout.master.cs"
-    Inherits="TTFWebFormsToMvc.Web.Web.MainLayout" %>
+    Inherits="TTFWebFormsToMvc.Web.MainLayout" %>
 
 <!doctype html>
 <html lang="en">
